# game

./: CMakeLists.txt  README.md
src/: array.c  array.h  average.c  average.h  catalog.c  catalog.h  draw.c  draw.h  font.c  font.h  main.c  misc.c  misc.h  physics.c  physics.h  shader_program.c  shader_program.h  sprite.c  sprite.h  text.c  text.h  texture.c  texture.h  vector_math.c  vector_math.h  window.c  window.h
src/shaders/: basic.fs.glsl  mask.vs.glsl  quad.fs.glsl  quad.vs.glsl  text.vs.glsl
